Libraries from URL are downlaoded to temporary folder.